--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "build": "docz build"
   },
   "dependencies": {
-    "docz": "next",
+    "docz": "^2.3.0-alpha.5",
+    "gatsby": "^2.18.13",
+    "gatsby-theme-docz": "^2.3.0-alpha.5",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "styled-components": "^4.3.2"
   }
 }
